--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,9 @@
         </ul>
     </nav>
 
-    {{ content }}
+    <div class="content">
+        {{ content }}
+    </div>
 
     <nav class="line social">
         <ul>
@@ -32,7 +34,6 @@
             <li><a href="https://github.com/dotarj"><i class="fa fa-github-alt"></i></a></li>
             <li><a href="http://linkedin.com/in/dotarj"><i class="fa fa-linkedin"></i></a></li>
         </ul>
-        <hr />
     </nav>
 
     <script>
