View model changes

--- a/_demos/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc/Views/Home/Index.cshtml
+++ b/_demos/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model UsingViewModelsWithAspNetMvc.ViewModels.CompanyViewModel
+﻿@model UsingViewModelsWithAspNetMvc.ViewModels.Home.IndexViewModel
 
 <table>
     <tr>
