--- a/_demos/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc/Views/Shared/_Layout.cshtml
+++ b/_demos/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@model UsingViewModelsWithAspNetMvc.ViewModels.LayoutViewModel
+﻿@model UsingViewModelsWithAspNetMvc.ViewModels.Shared.LayoutViewModel
 
 <!DOCTYPE html>
 <html>
